css/datepicker.css
/* ... */
.bootstrap-datetimepicker-widget:after {
    content:'';
    display:inline-block;
    border-left:6px solid transparent;
    border-right:6px solid transparent;
    border-bottom:6px solid #fff;
    position:absolute;
    top:-6px;
    left:7px
}
.bootstrap-datetimepicker-widget.pull-right:before {
    left:auto;
    right:6px
}
.bootstrap-datetimepicker-widget.pull-right:after {
    left:auto;
    right:7px
}
.bootstrap-datetimepicker-widget>ul {
    list-style-type:none;
    margin:0
}
.bootstrap-datetimepicker-widget .timepicker-hour, .bootstrap-datetimepicker-widget .timepicker-minute, .bootstrap-datetimepicker-widget .timepicker-second {
    width:100%;
    font-weight:bold;
    font-size:1.2em
}
.bootstrap-datetimepicker-widget .timepicker-hour.focused,
.bootstrap-datetimepicker-widget .timepicker-minute.focused,
.bootstrap-datetimepicker-widget .timepicker-second.focused {
  outline:2px dotted rgb(255, 163, 0);
}
.bootstrap-datetimepicker-widget table[data-hour-format="12"] .separator {
    width:4px;
    padding:0;
    margin:0
}
.bootstrap-datetimepicker-widget .datepicker>div {
    display:none
}
.bootstrap-datetimepicker-widget .picker-switch {
    text-align:center
}
.bootstrap-datetimepicker-widget table {
    width:100%;
    margin:0
}
.bootstrap-datetimepicker-widget td, .bootstrap-datetimepicker-widget th {
    text-align:center;
    width:20px;
    height:20px;
    -webkit-border-radius:4px;
    -moz-border-radius:4px;
    border-radius:4px
}
.bootstrap-datetimepicker-widget td.day:hover, .bootstrap-datetimepicker-widget td.hour:hover, .bootstrap-datetimepicker-widget td.minute:hover, .bootstrap-datetimepicker-widget td.second:hover {
    background:#eee;
    cursor:pointer
}
.bootstrap-datetimepicker-widget td.old, .bootstrap-datetimepicker-widget td.new {
    color:#999
}
.bootstrap-datetimepicker-widget td.active, .bootstrap-datetimepicker-widget td.active:hover {
    color:#fff;
    background-color:#006dcc;
    background-image:-moz-linear-gradient(top, #08c, #04c);
    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#04c));
    background-image:-webkit-linear-gradient(top, #08c, #04c);
    background-image:-o-linear-gradient(top, #08c, #04c);
    background-image:linear-gradient(to bottom, #08c, #04c);
    background-repeat:repeat-x;
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
    border-color:#04c #04c #002a80;
    border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    *background-color:#04c;
    filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);
    color:#fff;
    text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25)
}
.bootstrap-datetimepicker-widget td.active:hover, .bootstrap-datetimepicker-widget td.active:hover:hover, .bootstrap-datetimepicker-widget td.active:active, .bootstrap-datetimepicker-widget td.active:hover:active, .bootstrap-datetimepicker-widget td.active.active, .bootstrap-datetimepicker-widget td.active:hover.active, .bootstrap-datetimepicker-widget td.active.disabled, .bootstrap-datetimepicker-widget td.active:hover.disabled, .bootstrap-datetimepicker-widget td.active[disabled], .bootstrap-datetimepicker-widget td.active:hover[disabled] {
    color:#fff;
    background-color:#04c;
    *background-color:#003bb3
}
.bootstrap-datetimepicker-widget td.active:active, .bootstrap-datetimepicker-widget td.active:hover:active, .bootstrap-datetimepicker-widget td.active.active, .bootstrap-datetimepicker-widget td.active:hover.active {
    background-color:#039 \9
}
.bootstrap-datetimepicker-widget td.disabled, .bootstrap-datetimepicker-widget td.disabled:hover {
    background:0;
    color:#999;
    cursor:not-allowed
}
.bootstrap-datetimepicker-widget td span {
    display:block;
    width:47px;
    height:54px;
    line-height:54px;
    float:left;
    margin:2px;
    cursor:pointer;
    -webkit-border-radius:4px;
    -moz-border-radius:4px;
    border-radius:4px
}
.bootstrap-datetimepicker-widget td span:hover {
    background:#eee
}
.bootstrap-datetimepicker-widget td span.active {
    color:#fff;
    background-color:#006dcc;
    background-image:-moz-linear-gradient(top, #08c, #04c);
    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#04c));
    background-image:-webkit-linear-gradient(top, #08c, #04c);
    background-image:-o-linear-gradient(top, #08c, #04c);
    background-image:linear-gradient(to bottom, #08c, #04c);
    background-repeat:repeat-x;
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
    border-color:#04c #04c #002a80;
    border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    *background-color:#04c;
    filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);
    color:#fff;
    text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25)
}
.bootstrap-datetimepicker-widget td span.active:hover, .bootstrap-datetimepicker-widget td span.active:active, .bootstrap-datetimepicker-widget td span.active.active, .bootstrap-datetimepicker-widget td span.active.disabled, .bootstrap-datetimepicker-widget td span.active[disabled] {
    color:#fff;
    background-color:#04c;
    *background-color:#003bb3
}
.bootstrap-datetimepicker-widget td span.active:active, .bootstrap-datetimepicker-widget td span.active.active {
    background-color:#039 \9
}
.bootstrap-datetimepicker-widget td span.old {
    color:#999
}
.bootstrap-datetimepicker-widget td span.disabled, .bootstrap-datetimepicker-widget td span.disabled:hover {
    background:0;
    color:#999;
    cursor:not-allowed
}
.bootstrap-datetimepicker-widget th.switch {
    width:145px
}
.bootstrap-datetimepicker-widget th.next, .bootstrap-datetimepicker-widget th.prev {
    font-size:21px
}
.bootstrap-datetimepicker-widget th.disabled, .bootstrap-datetimepicker-widget th.disabled:hover {
    background:0;
    color:#999;
    cursor:not-allowed
}
/* ... */

